--- a/PrimerParcialAplicada2/Site.Master
+++ b/PrimerParcialAplicada2/Site.Master
@@ -1,4 +1,4 @@
-﻿﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="PrimerParcialAplicada2.Site" %>
+﻿﻿﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="PrimerPacialAplicada2.Site" %>
 
 <!DOCTYPE html>
 
@@ -6,59 +6,114 @@
 <head runat="server">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title><%:Page.Title%>Banking Control SAG</title>
 
-    <link href="/content/bootstrap.min.css" rel="stylesheet" />
-    <link href="/content/toastr.css" rel="stylesheet" />
-    <script src="/Scripts/jquery-3.0.0.min.js"></script>
-    <script src="/Scripts/bootstrap.min.js"></script>
-    <script src="/Scripts/bootstrap.bundle.min.js"></script>
-    <script src="/Scripts/toastr.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <%--Librerias para el toast--%>
+    <link href="./Media/css/Grey/ListBox.Grey.css" rel="stylesheet" type="text/css" />
+    <link href="./Media/css/WebTrack.css" rel="stylesheet" type="text/css" />
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/css/toastr.css"
+        rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/js/toastr.js"
+        type="text/javascript"></script>
+    <%--Programacion en Javascript para que funcione el toast--%>
+    <script type="text/javascript">
+        function Notify(msg, title, type, clear, pos, sticky) {
+            if (clear == true) {
+                toastr.clear();
+            }
+            if (sticky == true) {
+                toastr.tapToDismiss = true;
+                toastr.timeOut = 10000;
+            }
 
-    <title></title>
-    <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
+            toastr.options.onclick = function () {
+                //alert('You can perform some custom action after a toast goes away'); 
+            }
+            //"toast-top-left"; 
+            toastr.options.positionClass = pos;
+            if (type.toLowerCase() == 'info') {
+                toastr.options.timeOut = 1000;
+                toastr.tapToDismiss = true;
+                toastr.info(msg, title);
+            }
+            if (type.toLowerCase() == 'success') {
+                toastr.options.timeOut = 1500;
+                toastr.success(msg, title);
+            }
+            if (type.toLowerCase() == 'warning') {
+                toastr.options.timeOut = 3000;
+                toastr.warning(msg, title);
+            }
+            if (type.toLowerCase() == 'error') {
+                toastr.options.timeOut = 10000;
+                toastr.error(msg, title);
+            }
+        }
+    </script>
+
+    <asp:PlaceHolder ID="head" runat="server"></asp:PlaceHolder>
+
 </head>
 <body>
     <form id="form1" runat="server">
-        <div>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="http://localhost:61452/Default.aspx">SAG.do</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Archivo <span class="sr-only">(current)</span></a>
+        <div class="row">
+            <div class="col-lg-12" style="background-color: white; text-align:center">
+                <a href="/default.aspx">
+                    <img src="/Resources/BancoDigital.jpg" alt="Banking Control">
+                </a>
+            </div>
+        </div>
+
+        <%--menu principal--%>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/default.aspx">Banking Control</a>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Registros<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/Registros/rCuentas.aspx">Cuentas</a></li>
+                                <li><a href="/Registros/rDepositos.aspx">Depositos</a></li>
+                            </ul>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Registros
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="/Registros/CuentaBancariaWF.aspx">Cuenta Bancaria</a>
-                                <a class="dropdown-item" href="/Registros/DepositoWF.aspx">Depósitos</a>
-                            </div>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Consultas<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/Consultas/cCuentas.aspx">Cuentas</a></li>
+                                <li><a href="/Consultas/cDepositos.aspx">Depositos</a></li>
+                            </ul>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Consultas
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="/Consultas/CCuentaBancariaWF.aspx">Cuenta Bancaria</a>
-                                <a class="dropdown-item" href="/Consultas/CDepositoWF.aspx">Depósitos</a>
-                            </div>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Ayuda <span class="sr-only">(current)</span></a>
-                        </li>
+                        <li><a href="#">Ayuda</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#"><span class="glyphicon glyphicon-lock"></span> Cerrar Sesion</a></li>
                     </ul>
                 </div>
-            </nav>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+            </div>
+        </nav>
+
+
+        <%--contenedor y pie de pagina--%>
+        <div class=" container body-content">
+            <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
+
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - SAG.do</p>
+                <p>&copy; <%: DateTime.Now.Year %> - Copyright Banking Control SAG</p>
             </footer>
         </div>
     </form>
