--- a/PrimerParcialAplicada2/Reportes/PrestamoReport.rdlc
+++ b/PrimerParcialAplicada2/Reportes/PrestamoReport.rdlc
@@ -332,7 +332,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Sum(Fields!PrestamoId.Value)</Value>
+                              <Value>=Fields!PrestamoId.Value</Value>
                               <Style>
                                 <FontWeight>Normal</FontWeight>
                                 <Color>#333333</Color>
@@ -365,7 +365,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Sum(Fields!CuentaId.Value)</Value>
+                              <Value>=Fields!CuentaId.Value</Value>
                               <Style>
                                 <FontWeight>Normal</FontWeight>
                                 <Color>#333333</Color>
@@ -398,7 +398,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Sum(Fields!Capital.Value)</Value>
+                              <Value>=Fields!Capital.Value</Value>
                               <Style>
                                 <FontWeight>Normal</FontWeight>
                                 <Color>#333333</Color>
@@ -431,7 +431,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Sum(Fields!Meses.Value)</Value>
+                              <Value>=Fields!Meses.Value</Value>
                               <Style>
                                 <FontWeight>Normal</FontWeight>
                                 <Color>#333333</Color>
@@ -464,7 +464,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Sum(Fields!InteresAnual.Value)</Value>
+                              <Value>=Fields!InteresAnual.Value</Value>
                               <Style>
                                 <FontWeight>Normal</FontWeight>
                                 <Color>#333333</Color>
@@ -497,7 +497,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Sum(Fields!Total.Value)</Value>
+                              <Value>=Fields!Total.Value</Value>
                               <Style>
                                 <FontWeight>Normal</FontWeight>
                                 <Color>#333333</Color>
@@ -579,7 +579,7 @@
             </TablixMember>
           </TablixMembers>
         </TablixRowHierarchy>
-        <DataSetName>DataSet1</DataSetName>
+        <DataSetName>PrestamoDataSet</DataSetName>
         <Height>0.5in</Height>
         <Width>7in</Width>
         <Style>
@@ -607,11 +607,11 @@
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>f3d646f7-24eb-4501-b56e-f31f4dd3ae95</rd:DataSourceID>
+      <rd:DataSourceID>63bb6089-d3f4-4798-89d3-358df1c4b6da</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
-    <DataSet Name="DataSet1">
+    <DataSet Name="PrestamoDataSet">
       <Query>
         <DataSourceName>PrimerParcial2DataSet</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
@@ -657,5 +657,5 @@
     </DataSet>
   </DataSets>
   <rd:ReportUnitType>Inch</rd:ReportUnitType>
-  <rd:ReportID>1867c414-e8ce-4a0c-a00b-f140afeab675</rd:ReportID>
+  <rd:ReportID>ea68889c-f194-47b3-9d81-d0226254f81b</rd:ReportID>
 </Report>
